--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,14 @@
 language: csharp
 solution: Fos.sln
+mono:
+  - latest
+dist: trusty
 install:
+  - nuget # lets get version number
   - nuget install NUnit.ConsoleRunner -Version 3.7.0 -OutputDirectory testrunner
-  - nuget restore Fos.sln
+  - nuget restore Fos.sln -Verbosity detailed
+  - nuget restore Fos/packages.config -SolutionDirectory ./ -Verbosity detailed
+  - nuget restore Fos.Tests/packages.config -SolutionDirectory ./ -Verbosity detailed
 script:
   - msbuild Fos.sln /p:Configuration=Release
   - mono ./testrunner/NUnit.ConsoleRunner.3.7.0/tools/nunit3-console.exe ./Fos.Tests/bin/Release/Fos.Tests.dll
